header logo fix on firefox

--- a/site/static/scss/styles.scss
+++ b/site/static/scss/styles.scss
@@ -7,6 +7,7 @@ $border-colour: #ccc;
     background: url('/static/images/ammcs-caims-logo.png') no-repeat;
     background-size: contain;
     background-position: center right;
+    height: 100px;
   }
   .ammcs-title {
     text-align: left;
